remove cdn link to web-components

--- a/Templates/Minimal/TailBlazorServer/Pages/_Layout.cshtml
+++ b/Templates/Minimal/TailBlazorServer/Pages/_Layout.cshtml
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
     <link rel="stylesheet" href="TailBlazorServer.min.css" />
-    <script
+    @* <script
       type="module"
-      src="https://unpkg.com/@@fluentui/web-components"></script>
+      src="https://unpkg.com/@@fluentui/web-components"></script> *@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
         <!-- https://fluent-components.azurewebsites.net/?path=/docs/getting-started-overview--page -->
     <!-- https://docs.microsoft.com/en-us/fluent-ui/web-components/ -->
