--- a/Templates/Minimal/TailBlazorWasm/wwwroot/index.html
+++ b/Templates/Minimal/TailBlazorWasm/wwwroot/index.html
@@ -12,10 +12,10 @@
 
     <!-- https://fluent-components.azurewebsites.net/?path=/docs/getting-started-overview--page -->
     <!-- https://docs.microsoft.com/en-us/fluent-ui/web-components/ -->
-    <script
+    <!-- <script
       type="module"
       src="https://unpkg.com/@fluentui/web-components"
-    ></script>
+    ></script> -->
   </head>
 
   <body class="font-sans">
