--- a/StaticWebAppsDemo/MarkBlobView.unscoped.css
+++ b/StaticWebAppsDemo/MarkBlobView.unscoped.css
@@ -29,6 +29,7 @@ li {
 
 code,
 pre {
+  @apply whitespace-pre-wrap;
   @apply font-mono font-semibold text-base;
   @apply bg-gray-300 dark:bg-gray-600;
   @apply px-2 rounded-md pt-[-1px] tracking-tight;
