nifty scrollbars, opacity, blue coloring

--- a/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
@@ -9,7 +9,7 @@
 
     <div class="col-span-2 flex flex-row pl-4 pr-1 self-center justify-between">
 
-        <div class="text-xl font-bold italic tracking-wide flex-grow self-center">WIP !</div>    
+        <div class="!text-blue-500 text-3xl font-extrabold italic tracking-widest flex-grow self-center">WIP!</div>    
 
         <DarkSwitch />
 
@@ -23,15 +23,15 @@
     </div>
 
     <div class="@NavMenuCssClass 
-                pl-1 pr-2
+                pl-1 pr-2 pt-8
                 rounded-r-md" >
 
         <NavLinks />
 
     </div>
 
-    <div class="w-full px-px sm:pl-2 sm:pr-8 sm:pt-2 md:pr-16 lg:pr-32
-                overflow-x-hidden overflow-y-auto"
+    <div class="w-full h-full overflow-x-hidden overflow-y-auto
+                scrollbar-thin scrollbar-thumb-slate-300 scrollbar-track-gray-600"
 
          @onclick="changeAccent">
         @Body
@@ -39,16 +39,19 @@
 
 </div>
 
-<div class="absolute w-14 h-14 sm:hidden bottom-4 right-8 !bg-cyan-300 backdrop-blur-sm rounded-full p-2 shadow-md">
-    <button @onclick="ToggleNavMenu" >
-        @if (hidden)
-        {
-            <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7"></path></svg>
-        }
-        else
-        {
-            <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-        }
+<div class="absolute bottom-4 right-8
+            sm:hidden 
+            w-14 h-14  
+            !bg-blue-500 rounded-full shadow-2xl shadow-black">
+    <button @onclick="ToggleNavMenu" class="relative w-14 h-14" >
+        <svg class="transition-opacity  absolute top-2 left-2 w-10 h-10 
+                @(hidden?"opacity-100 duration-700":"opacity-0 duration-50")" fill="none" 
+                
+            stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7"></path></svg>
+        <svg class="transition-opacity absolute top-2 left-2 w-10 h-10 
+                @(hidden?"opacity-0  duration-50":"opacity-100 duration-700")" fill="none" 
+                
+            stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
     </button>
 </div>
 
@@ -75,7 +78,6 @@
     private void ToggleNavMenu()
     {
         hidden = !hidden;
-        Console.WriteLine(hidden);
         ShouldRender();
     }
 }
