--- a/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
@@ -1,7 +1,12 @@
 @page "/{blob?}"
 
-@* @if (blob is not null) *@
-@* { *@
+<div class="h-full pl-px pr-4 pt-4
+            sm:pl-4 sm:pr-8  
+            md:pl-8 md:pr-12  
+            lg:pl-12 lg:pr-16
+            xl:pl-16" >
+
+
     <MarkBlobView Blob="@blob">
         <BlobLoading>
             <Loading/>
@@ -10,7 +15,7 @@
             <NotFound/>
         </BlobNotFound>
     </MarkBlobView>
-@* } *@
+</div>
 
 @code
 {
