grid - use arbitrary values instead of extending theme [skip ci]

--- a/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
@@ -5,7 +5,7 @@
 @inherits LayoutComponentBase
 @inject NavigationManager navManager
 
-<div class="grid grid-cols-basic grid-rows-basic h-full @debug">
+<div class="grid grid-cols-[min-content,auto] grid-rows-[min-content,auto] h-full @debug">
 
     <div class="col-span-2 flex flex-row pl-4 pr-1 self-center justify-between">
 
