take advantage of RCL static web assets fixes #34 fixes #5

--- a/Templates/Full/BlazorWasm/wwwroot/index.html
+++ b/Templates/Full/BlazorWasm/wwwroot/index.html
@@ -7,7 +7,10 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>Client</title>
-    <link rel="stylesheet" href="./TailBlazor.min.css" />
+    <link
+      rel="stylesheet"
+      href="./_content/RazorClassLibrary/TailBlazor.min.css"
+    />
     <base href="/" />
   </head>
 
