point to RCL Static Web Assets

--- a/Templates/Full/BlazorServer/Pages/_Host.cshtml
+++ b/Templates/Full/BlazorServer/Pages/_Host.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Server</title>
-    <link rel="stylesheet" href="/TailBlazor.min.css" />
+    <link rel="stylesheet" href="/_content/RazorClassLibrary/TailBlazor.min.css" />
     <base href="/" />
 </head>
 
