--- a/Templates/Minimal/TailBlazorServer/Components/DarkSwitch/DarkSwitch.razor
+++ b/Templates/Minimal/TailBlazorServer/Components/DarkSwitch/DarkSwitch.razor
@@ -1,4 +1,4 @@
-@namespace TailBlazorWasm.Components
+@namespace TailBlazorServer.Components
 
 @* <fluent-switch title="toggle dark mode" @onclick="switchTheme" current-checked=isLightMode /> *@
 
