--- a/Templates/Minimal/TailBlazorServer/Components/DarkSwitch/DarkSwitch.razor
+++ b/Templates/Minimal/TailBlazorServer/Components/DarkSwitch/DarkSwitch.razor
@@ -1,8 +1,7 @@
 @namespace TailBlazorServer.Components
 
-@* <fluent-switch title="toggle dark mode" @onclick="switchTheme" current-checked=isLightMode /> *@
 
-<div class="absolute p-2 group max-w-min select-none" role="button"  @onclick="switchTheme" @onkeypress="(e) => Console.WriteLine(e.Key)">
+<div class="relative p-2 group max-w-min select-none" role="button"  @onclick="switchTheme" @onkeypress="(e) => Console.WriteLine(e.Key)">
     <div class="px-[2px] flex justify-between  h-6 w-12 bg-gray-600 rounded-full ">
         <div class="group duration-100  @(isLightMode ? "opacity-0"   : "opacity-100")">🌜</div>
         <div class="group duration-100  @(isLightMode ? "opacity-100" : "opacity-0"  )">🌞</div>
