--- a/Templates/Minimal/TailBlazorPages/Pages/Index.cshtml
+++ b/Templates/Minimal/TailBlazorPages/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="text-[calc(1.475rem+2.7vw)] font-light leading-[1.2]">Welcome</h1>
-    <p class="mb-4">Learn about <a class="underline text-blue-600" href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p class="mb-4">Learn about <a class="underline text-blue-600" href="https://docs.microsoft.com/aspnet/core" target="_blank">building Web apps with ASP.NET Core</a>.</p>
 </div>
