--- a/Templates/Minimal/TailBlazorPages/_Imports.cshtml
+++ b/Templates/Minimal/TailBlazorPages/_Imports.cshtml
@@ -1,5 +1,3 @@
-﻿@using TailBlazorPages
-@using TailBlazorPages.Components
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@namespace TailBlazorPages.Pages
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using TailBlazorPages
+@using TailBlazorPages.Components
