--- a/Templates/Minimal/TailBlazorPages/Components/DarkSwitch/DarkSwitch.razor
+++ b/Templates/Minimal/TailBlazorPages/Components/DarkSwitch/DarkSwitch.razor
@@ -2,12 +2,12 @@
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Web
 
-<div class="relative p-2 group max-w-min select-none" role="button"  @onclick="switchTheme" >
+<div class="relative p-2 group max-w-min select-none" role="button"  @onclick="switchTheme" @onkeypress="(e) => Console.WriteLine(e.Key)">
     <div class="px-[2px] flex justify-between  h-6 w-12 bg-gray-600 rounded-full ">
-        <div class="group duration-100  @(isLightMode ? "opacity-0"   : "opacity-100")">🌜</div>
-        <div class="group duration-100  @(isLightMode ? "opacity-100" : "opacity-0"  )">🌞</div>
+        <div class="group duration-100 opacity-0 dark:opacity-100">🌜</div>
+        <div class="group duration-100 opacity-100 dark:opacity-0">🌞</div>
     </div>
-    <div class="group theme-knob @(isLightMode ? "" :  "translate-x-6") "></div>
+    <div class="group theme-knob dark:translate-x-6"></div>
 </div>
 
 @* group-focus:ring-2 ring-blue-500 *@
