base href needed for blazor i guess

--- a/Templates/Minimal/TailBlazorPages/Pages/Shared/_Layout.cshtml
+++ b/Templates/Minimal/TailBlazorPages/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TailBlazorPages</title>
     <link rel="stylesheet" href="~/css/TailBlazorPages.min.css" asp-append-version="true" />
-    @* <base href="/" /> *@
+    <base href="/" />
 
 </head>
 <body>
