better iconlink spacing

--- a/Source/Components/IconLink/IconLink.razor.css
+++ b/Source/Components/IconLink/IconLink.razor.css
@@ -1,13 +1,15 @@
 .link-container {
-  @apply font-semibold text-sm sm:text-base;
+  @apply font-semibold text-sm sm:text-base lg:text-lg;
 
-  @apply hover:no-underline hover:bg-neutral-200/80 hover:dark:bg-neutral-700/70;
+  &:hover {
+    @apply no-underline bg-neutral-200/80 dark:bg-neutral-700/70;
+  }
 
   @apply rounded-[4px] stroke-black dark:stroke-white;
 }
 
 ::deep a {
-  @apply py-px my-1 pl-px sm:pl-1
+  @apply py-px my-1 pl-px sm:pl-1 sm:py-1
          dark:text-neutral-200;
 }
 
