--- a/Source/Components/IconLink/IconLink.razor
+++ b/Source/Components/IconLink/IconLink.razor
@@ -1,6 +1,6 @@
 @namespace TailBlazor.Components
 
-<div class="link-container @(Large?"":"ml-2")">
+<div class="link-container  @(Large? "mt-2 first:mt-0" :"ml-2 mt-1")">
 
 @if (Link is string)
 {
