--- a/Source/Components/DarkSwitch/DarkSwitch.razor.css
+++ b/Source/Components/DarkSwitch/DarkSwitch.razor.css
@@ -1,5 +1,5 @@
 .theme-knob {
-  @apply absolute h-5 w-5 rounded-full top-2 left-2 mt-0.5 ml-0.5;
+  @apply h-5 w-5 rounded-full top-2 left-2 mt-0.5 ml-0.5;
   @apply bg-gray-200 dark:bg-gray-900;
 
   @apply transition-all delay-75 duration-300;
