--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -14,7 +14,8 @@
     }
     else
     {
-        <div class="prose prose-sm md:prose-md lg:prose-lg xl:prose-xl 2xl:prose-2xl dark:prose-invert markdown" >
+        <div class="prose prose-sm sm:prose-md lg:prose-xl dark:prose-invert 
+                    markdown" >
                 @((MarkupString)content)
         </div>
     } 
