--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -7,7 +7,7 @@
 <div class="grid grid-cols-[min-content,auto] grid-rows-[min-content,auto] h-full @debug">
 
     <div class="col-span-2 flex flex-row pl-4 pr-2 
-                xl:h-14 items-center
+                items-center
                 self-center justify-between
                 border-b border-neutral-800
                 dark:bg-neutral-800">
@@ -33,8 +33,9 @@
 
     </div>
 
-    <div class="w-full h-full overflow-x-hidden overflow-y-auto
-                pl-6 pt-8
+    <div class="w-full h-full pt-8
+                px-2 sm:px-4 md:px-6 
+                overflow-x-hidden overflow-y-auto
                 scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200">
         @Body
     </div>
