--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -14,8 +14,8 @@
     }
     else
     {
-        <div class="prose prose-sm sm:prose-md lg:prose-xl dark:prose-invert 
-                    markdown pb-8" >
+        <div class="prose prose-sm lg:prose-lg dark:prose-invert 
+                    markdown" >
                 @((MarkupString)content)
         </div>
     } 
