implement info blocks

--- a/Source/Pages/Markdown.nested.css
+++ b/Source/Pages/Markdown.nested.css
@@ -10,6 +10,22 @@
     } */
   }
 
+  .info {
+    @apply p-2 my-8 ml-1 rounded-md 
+           italic font-semibold
+           bg-yellow-50 ring-1 ring-orange-300 
+           dark:bg-amber-400 dark:text-black;
+
+    &:before {
+      content: url("info.svg");
+      @apply w-6 h-6 mr-2 inline-block;
+    }
+
+    p {
+      @apply inline;
+    }
+  }
+
   .md-footnote {
     &.return {
       @apply text-xs pl-4;
@@ -33,8 +49,11 @@
   .pre,
   code {
     @apply !leading-[1.22] tracking-tight
-           !font-light
-           text-sm sm:text-base md:text-lg;
+           text-sm sm:text-base;
+  }
+
+  .pre p {
+    @apply my-0;
   }
 
   del {
@@ -73,22 +92,6 @@
   }
 
   img {
-    @apply m-auto bg-neutral-700 rounded-md p-2;
+    @apply m-auto bg-neutral-500 rounded-md p-2;
   }
-
-  /*
-
-  blockquote {
-    @apply bg-gray-300 dark:bg-gray-600;
-    @apply rounded-md pl-2 sm:pl-4;
-    @apply py-2;
-    @apply font-semibold;
-
-    > * {
-      @apply before:content-['\201C'];
-      @apply after:content-['\201D'];
-    }
-  }
-
-*/
 }
