--- a/Source/Components/IconLink/IconLink.razor.css
+++ b/Source/Components/IconLink/IconLink.razor.css
@@ -1,19 +1,21 @@
 .link-container {
-  @apply font-semibold text-base xl:text-lg leading-none transition-[font-size,width];
+  @apply font-semibold text-base 
+         leading-none 
+         rounded-[4px] 
+         transition-[font-size,width]
+         stroke-black dark:stroke-white;
 
   &:hover {
     @apply no-underline bg-neutral-200/80 dark:bg-neutral-700/70;
   }
-
-  @apply rounded-[4px] stroke-black dark:stroke-white;
 }
 
 ::deep a {
-  @apply py-1 my-1 pl-px sm:pl-1
+  @apply py-1 my-1 pl-px
          dark:text-neutral-200;
-}
 
-::deep a.active {
-  @apply bg-neutral-200/80 rounded-[4px]
-        dark:bg-neutral-700/70 dark:text-blue-600;
+  &.active {
+    @apply bg-neutral-200/80 rounded-[4px]
+         dark:bg-neutral-700/70 dark:text-blue-600;
+  }
 }
