--- a/Source/Pages/Markdown.nested.css
+++ b/Source/Pages/Markdown.nested.css
@@ -3,11 +3,19 @@
   @apply max-w-3xl 2xl:max-w-4xl;
   @apply transition-[font-size,width];
 
+  .emoji {
+    @apply inline font-normal;
+  }
+
+  .intro {
+    @apply indent-6;
+  }
+
   a {
     @apply text-blue-600 no-underline;
-    /* &:tech {
-      @apply text-black decoration-blue-600 decoration-wavy;
-    } */
+    &.tech {
+      @apply text-2xl italic font-extrabold;
+    }
   }
 
   .info {
@@ -26,6 +34,10 @@
     }
   }
 
+  hr {
+    @apply !my-8;
+  }
+
   .md-footnote {
     &.return {
       @apply text-xs pl-4;
@@ -39,17 +51,21 @@
   pre,
   .pre {
     @apply p-2 pb-4 mr-4 overflow-auto rounded-md
-           bg-stone-200/30 dark:bg-slate-700
+           bg-zinc-200 dark:bg-zinc-700
            text-black dark:text-white
            overflow-x-auto
-            scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200;
+           scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200;
+  }
+
+  .mono {
+    @apply font-mono;
   }
 
   pre,
   .pre,
   code {
     @apply !leading-[1.22] tracking-tight
-           text-sm sm:text-base;
+           text-sm sm:text-base !font-mono font-normal;
   }
 
   .pre p {
@@ -71,10 +87,10 @@
     /* more like ohmyposh.dev, less like tailwindcss.com */
     @apply before:!content-none after:!content-none;
     &:not(pre *, .pre *) {
-      @apply bg-slate-100 dark:bg-slate-700;
+      @apply bg-zinc-200 dark:bg-zinc-700;
 
       @apply px-[0.3rem] py-px mx-1 rounded-md 
-             ring-1 ring-slate-300 dark:ring-0;
+             ring-1 ring-neutral-300 dark:ring-0;
     }
   }
 
