--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -34,11 +34,11 @@
 
     </div>
 
-    <div class="w-full h-full pt-8
-                px-2 sm:px-4 md:px-8 lg:px-16 xl:px-24 2xl:px-32
-                transition-[padding]
-                overflow-x-hidden overflow-y-auto
-                scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200">
+    <div id="body" class="w-full h-full pt-8
+                            px-2 sm:px-4 md:px-8 lg:px-16 xl:px-24 2xl:px-32
+                            transition-[padding]
+                            overflow-x-hidden overflow-y-auto
+                            scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200">
         @Body
     </div>
 
