move navlink padding from MainLayout

--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -25,9 +25,7 @@
 
     </div>
 
-    <div class="@nav pt-6 pr-2
-                pl-2 sm:pl-4 md:pl-6 
-                transition-[padding]
+    <div class="@nav pt-6
                 border-r-2 border-neutral-300 dark:border-neutral-600" >
 
         <NavLinks />
