--- a/Source/Layouts/NavLinks.razor
+++ b/Source/Layouts/NavLinks.razor
@@ -1,5 +1,6 @@
-<div class="w-44 lg:w-52
-            transition-[font-size,width]">
+<div class="w-44 lg:w-52 
+            pr-2 pl-2 sm:pl-4 md:pl-6
+            transition-[width,padding]">
     
     <IconLink Text="overview" Link="/" Large=true>
         <svg fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
