dump the page loader, it's instant

--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -3,21 +3,21 @@
 <AnchorNavigationHook />
 
 
-    @if (found is null)
-    {
-        <div class="flex flex-col h-full" > <Loading /></div>   
-    }
-    else if (found is false)
-    {
-        <NotFound />
-    }
-    else
-    {
-        <div class="prose xl:prose-lg dark:prose-invert 
-                    markdown" >
-                @((MarkupString)content)
-        </div>
-    } 
+@if (found is null)
+{
+    @* <div class="flex flex-col h-full" > <Loading /></div>    *@
+}
+else if (found is false)
+{
+    <NotFound />
+}
+else
+{
+    <div class="prose prose-sm sm:prose-base xl:prose-lg dark:prose-invert 
+                markdown" >
+            @((MarkupString)content)
+    </div>
+} 
     
 
 @code
