--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <div class="grid grid-cols-[min-content,auto] grid-rows-[min-content,auto] h-full @debug">
 
-    <div class="col-span-2 flex flex-row pl-6 pr-2 h-14
+    <div class="col-span-2 flex flex-row pl-6 pr-2 h-10 sm:h-14
                 items-center
                 self-center justify-between
                 border-b border-neutral-300 dark:border-0
@@ -33,7 +33,7 @@
     </div>
 
     <div id="body" class="w-full h-full pt-8
-                            px-2 sm:px-4 md:px-8 lg:px-16 xl:px-24 2xl:px-32
+                            pl-2 pr-4 sm:px-6 md:px-10 lg:px-16 xl:px-24 2xl:px-32
                             transition-[padding]
                             overflow-x-hidden overflow-y-auto
                             scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200">
@@ -45,7 +45,7 @@
 <div class="absolute bottom-4 right-8
             sm:hidden 
             w-14 h-14  
-            !bg-blue-500 rounded-full shadow-2xl shadow-black">
+            !bg-blue-500/50 rounded-full shadow-2xl shadow-black">
     <button @onclick="ToggleNavMenu" class="relative w-14 h-14" >
         <svg class="transition-opacity  absolute top-2 left-2 w-10 h-10 
                 @(hidden?"opacity-100 duration-700":"opacity-0 duration-50")" fill="none" 
