--- a/Source/Layouts/NavLinks.razor
+++ b/Source/Layouts/NavLinks.razor
@@ -1,5 +1,5 @@
-<div class="w-44 lg:w-52 
-            pr-2 pl-2 sm:pl-4 md:pl-6
+<div class="w-44 md:w-48 lg:w-52 
+            pr-2 pl-2 sm:pl-4 md:pl-6 lg:pl-8
             transition-[width,padding]">
     
     <IconLink Text="overview" Link="/" Large=true>
